# arduino-serial-stats

./: .gitignore  CMakeLists.txt  LICENSE  client.ino  readme.md  serialDisplay.ino  server.cpp  server.go  server.py  serverBackgroundStart.ps1
include/: Datatypes.hpp  SerialConstant.hpp  datatypes.hpp  serialconstant.hpp
include/resources/: resources.cpp  resources.hpp
serialport/: go.mod  serialPort_unix.go  serialPort_win.go
